Fixed mobile view bug where project section content would overflow on deployment page

--- a/css/style.css
+++ b/css/style.css
@@ -468,7 +468,7 @@ aside h2 {
   .project-content {
     margin-right: 0px;
     width: 100%;
-    height: auto;
+    height: 53%;
   }
 
   .project-content ul {
